commented out mvc home page

--- a/MvcAngularSpa/Views/Home/Index.cshtml
+++ b/MvcAngularSpa/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@{
+﻿@*@{
     ViewBag.title = "home page";
 }
 
@@ -10,4 +10,4 @@
             to see current coffee spots or comments on them!
         </p>
     </div>
-</div>
+</div>*@
